--- a/emqx_confs/app.2025.06.12.07.28.28.config
+++ b/emqx_confs/app.2025.06.12.07.28.28.config
@@ -70,7 +70,7 @@
                        overload_kill_enable => true,
                        overload_kill_mem_size => 31457280,
                        overload_kill_qlen => 20000},
-                 level => warning,
+                 level => debug,
                  filters =>
                      [{drop_progress_reports,
                           {fun logger_filters:progress/2,stop}}],
@@ -79,9 +79,31 @@
                          #{time_offset => [],chars_limit => unlimited,
                            depth => 100,single_line => true,
                            template => ["[",level,"] ",msg,"\n"],
-                           payload_encode => text,
-                           timestamp_format => auto}}}}]},
-      {logger_level,warning}]},
+                           payload_encode => text,timestamp_format => auto}}}},
+           {handler,default,logger_disk_log_h,
+               #{config =>
+                     #{type => wrap,file => "/opt/emqx/log/emqx.log",
+                       burst_limit_enable => true,drop_mode_qlen => 3000,
+                       flush_qlen => 8000,sync_mode_qlen => 100,
+                       overload_kill_restart_after => 5000,
+                       burst_limit_max_count => 10000,
+                       burst_limit_window_time => 1000,
+                       overload_kill_enable => true,
+                       overload_kill_mem_size => 31457280,
+                       overload_kill_qlen => 20000,max_no_bytes => 52428800,
+                       max_no_files => 10},
+                 level => debug,
+                 filters =>
+                     [{drop_progress_reports,
+                          {fun logger_filters:progress/2,stop}}],
+                 formatter =>
+                     {emqx_logger_textfmt,
+                         #{time_offset => [],chars_limit => unlimited,
+                           depth => 100,single_line => true,
+                           template => ["[",level,"] ",msg,"\n"],
+                           payload_encode => text,timestamp_format => auto}},
+                 filesync_repeat_interval => no_repeat}}]},
+      {logger_level,debug}]},
  {prometheus,
      [{collectors,
           [prometheus_boolean,prometheus_counter,prometheus_gauge,
